syntax = "proto3";

package tasknotes.common;

// Ajuste para uso local en el m√≥dulo search-service
option go_package = "search-service/grpc/generated/common";

// Tipos comunes compartidos entre servicios

message CategorySummary {
  string id = 1;
  string name = 2;
  string color = 3;
}

message TagSummary {
  string id = 1;
  string name = 2;
  string color = 3;
}