syntax = "proto3";

package tasknotes.tasks;

import "common.proto";

// Ajuste para uso local en el módulo search-service
option go_package = "search-service/grpc/generated/tasks";

// Servicio gRPC para búsqueda de tareas
service TasksSearchService {
  rpc SearchTasks(SearchTasksRequest) returns (SearchTasksResponse);
}

// Request para búsqueda de tareas
message SearchTasksRequest {
  string query = 1;
  string user_id = 2;       // ajustado a string para compatibilidad
  int32 limit = 3;
  int32 skip = 4;
  string category = 5;
  repeated string tags = 6;
}

// Response con resultados de búsqueda
message SearchTasksResponse {
  repeated TaskSearchResult tasks = 1;
  int64 total = 2;
}

// Resultado individual de búsqueda de tarea
message TaskSearchResult {
  int32 id = 1;
  string title = 2;
  string description = 3;
  bool completed = 4;
  string priority = 5;
  string due_date = 6;
  tasknotes.common.CategorySummary category = 7;
  repeated tasknotes.common.TagSummary tags = 8;
  string user_id = 9;       // ajustado a string para compatibilidad
  string created_at = 10;
  string updated_at = 11;
}